# fast-af

./: README.md  pyproject.toml
fast_af/: __main__.py  fast_template.py  main.py  utils.py
fast_af/conf/base_template/: .env-tpl  Makefile-tpl  Readme.md-tpl  requirements.txt-tpl
fast_af/conf/database_template/db_handlers/: auth_db_handler.py-tpl
fast_af/conf/database_template/orms/: auth_orm.py-tpl
fast_af/conf/job_manager_template/: job_runner.py-tpl
fast_af/conf/job_manager_template/email/: mailer.py-tpl
fast_af/conf/root_template/: .env-tpl  app.py-tpl  app_routers.py-tpl  arq_worker.py-tpl  database.py-tpl  settings.py-tpl
fast_af/conf/root_template/utils/: abstract_base.py-tpl  base_models_abstract.py-tpl
fast_af/conf/schemas_template/: error_messages_schema.py-tpl  response_info_schema.py-tpl
fast_af/conf/services_template/: auth_services.py-tpl
fast_af/conf/services_template/utils/: exceptions.py-tpl  file_uploader_utils.py-tpl
fast_af/conf/sm_base_template/: Readme.md-tpl  make_db_migrations.py-tpl
fast_template_python/: __main__.py  fast_template.py  main.py
fast_template_python/conf/base_template/: .gitignore-tpl  requirements.txt-tpl
fast_template_python/conf/job_manager_template/: job_runner.py-tpl
fast_template_python/conf/root_template/: app.py-tpl  logging.py-tpl  redis_manager.py-tpl
fast_template_python/conf/routers_template/: auth_router.py-tpl  miscellenenous_router.py-tpl
fast_template_python/conf/schemas_template/: auth_schemas.py-tpl  file_upload_schema.py-tpl
fast_template_python/conf/services_template/: auth_services.py-tpl  miscelleneous_services.py-tpl
fast_template_python/conf/services_template/utils/: auth_utils.py-tpl  file_downloader.py-tpl  (+2 more)
(+1 files in other folders)
