[tool.black]
line-length = 119

[tool.poetry]
name = "fast-template-python"
version = "0.1.2"
description = ""
    authors = ["Peter Akande <akandepeter86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.12.5"

[tool.poetry.scripts]
fast-template = "fast_template_python.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"