[tool.black]
line-length = 119

[tool.poetry]
name = "fast-af"
version = "0.1.0"
description = "A FastAPI template generator with lightweight, standard, and full-stack options"
authors = ["Zachary Dubroc <zachary.dubroc@mscoding.org>"]
readme = "README.md"
keywords = ["fastapi", "template", "python"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.12.5"

[tool.poetry.scripts]
fast-af = "fast_af.main:app"
sm = "fast_af.main:sm_frap"
md = "fast_af.main:md_frap"
lg = "fast_af.main:lg_frap"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"